<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category1">

        <CheckBoxPreference
            android:key="s1"
            android:title="@string/s1"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="s2"
            android:title="@string/s2"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="s3"
            android:title="@string/s3"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="s4"
            android:title="@string/s4"
            android:defaultValue="true"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preference_category2">

        <Preference
            android:key="author"
            android:title="@string/author"
            android:summary="@string/author_more"/>

    </PreferenceCategory>

</PreferenceScreen>